--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install autotools
+      run: sudo apt-get update && sudo apt-get install -y autoconf automake libtool
+
+    - name: Generate configure script
+      run: |
+        autoreconf -fvi
+
     - name: configure
       run: ./configure
 
