--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,21 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install autotools
-      run: sudo apt-get update && sudo apt-get install -y autoconf automake libtool
-
-    - name: Generate configure script
-      run: |
-        autoreconf -fvi
-
-    - name: configure
-      run: ./configure
-
-    - name: Install dependencies
+    - name: Make
       run: make
 
-    - name: Run check
-      run: make check
 
-    - name: Run distcheck
-      run: make distcheck
